--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^10.0.4",
     "@rebass/emotion": "^3.0.0",
     "cross-fetch": "^2.2.3",
+    "emotion-theming": "^10.0.4",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
