--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "@emotion/core": "^10.0.4",
     "@emotion/styled": "^10.0.4",
     "@rebass/emotion": "^3.0.0",
+    "@sindresorhus/slugify": "^0.6.0",
     "cross-fetch": "^2.2.3",
     "emotion-theming": "^10.0.4",
+    "formik": "^1.4.0",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "sillyname": "^0.1.0",
+    "yup": "^0.26.6"
   }
 }
