--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest --coverage",
     "test:frontend": "jest frontend",
     "test:backend": "jest backend",
-    "lint": "eslint --fix \"frontend/**/*.js\" \"backend/**/*.js\"",
+    "lint": "eslint --fix frontend backend --ext .js,.jsx",
     "lint:frontend": "eslint --fix \"frontend/**/*.js\"",
     "lint:backend": "eslint --fix \"backend/**/*.js\""
   },
@@ -42,6 +42,7 @@
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-emotion": "^10.0.4",
     "enzyme": "^3.7.0",
