--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "emotion-theming": "^10.0.4",
     "formik": "^1.4.0",
     "next": "^7.0.2",
+    "polished": "^2.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
